# agent-hooks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  deploy-docs.yml  release-candidate.yml  release-pypi.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/features/: index.html
0.1.0rc1/: 404.html  index.html  sitemap.xml
0.1.0rc1/features/: index.html
0.1.0rc2/: 404.html  index.html  sitemap.xml
0.1.0rc2/features/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/features/: index.html
0.2.0/search/: search_index.json
0.2.0rc1/: 404.html  index.html  sitemap.xml
0.2.0rc1/features/: index.html
0.2.0rc1/search/: search_index.json
adr/: 001-data-models.md
docs/: features.md  index.md  overview.md
docs/architecture/: overview.md  provider-adapters.md
docs/assets/: agent-hooks-landing.drawio
docs/cli/: builtin-callback.md  custom-apps.md
docs/framework/: agenthook.md  events-and-injection.md  middleware.md
docs/getting-started/: macos-quickstart.md
docs/providers/: claude-code.md  codex.md
docs/reference/: configuration.md  limitations.md  logging.md  troubleshooting.md
docs/stylesheets/: extra.css
examples/: README.md  __init__.py  audit_exporter.py  branch_protection_guard.py  claude_permission_suggestion_filter.py  codex_prompt_guard.py  codex_repo_context.py  codex_session_journal.py  codex_test_before_stop.py  command_policy_middleware.py  example_utils.py  minimal_permission.py  repo_boundary_guard.py  sensitive_data_exfiltration_guard.py  stop_notifier.py
examples/sample_payloads/: claude_notification_permission_prompt.json  claude_permission_request.json  claude_stop.json  (+14 more)
latest/: 404.html  index.html  sitemap.xml
macos/: .gitignore  Package.swift  README.md
overrides/: main.html
rc/: 404.html  index.html
src/: callback.py
tests/: test_agent_hooks_callback.py  test_examples.py  test_models.py  test_prek_hooks.py  test_release_scripts.py  test_sqlite_transport.py  test_transport.py
(+209 files in other folders)
