[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agent-hooks"
version = "0.2.0"
description = "One local callback layer for Claude Code and Codex: a macOS-ready CLI for native permission dialogs and notifications, plus a FastAPI-like Python framework"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Documentation = "https://www.zhu424.dev/agent-hooks/latest/"
Homepage = "https://www.zhu424.dev/agent-hooks/latest/"
Source = "https://github.com/jason810496/agent-hooks"

[project.scripts]
agent-hooks = "agent_hooks.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
    "mike>=2.1,<3",
    "pymdown-extensions>=10.15,<11",
]

[tool.uv]
package = true
exclude-newer = "7 days"


[tool.hatch.build.targets.wheel]
packages = ["src/agent_hooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]
extend-exclude = [
    "logs",
]

[tool.ruff.lint]
extend-select = [
    "B",
    "D",
    "I",
    "RUF100",
    "SIM",
    "UP",
]
ignore = [
    "D100",
    "D101",
    "D104",
    "D105",
    "D107",
    "D203",
    "D212",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-return-type = "error"
invalid-argument-type = "error"
missing-argument = "error"
unknown-argument = "error"
